--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint src --ext .ts",
-    "prepublishOnly": "pnpm run build"
+    "lint:fix": "eslint src --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "prepublishOnly": "pnpm run build",
+    "fix": "pnpm run lint:fix && pnpm run format"
   },
   "keywords": [
     "mcp",
@@ -28,6 +32,11 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^3.1.1",
     "typescript": "^5.3.3",
     "vitest": "^1.0.0"
   },
@@ -39,5 +48,8 @@
     "url": "https://github.com/y-t99/ts-mcp-spec/issues"
   },
   "homepage": "https://github.com/y-t99/ts-mcp-spec#readme",
-  "packageManager": "pnpm@9.15.3"
+  "packageManager": "pnpm@9.15.3",
+  "dependencies": {
+    "zod": "^3.24.2"
+  }
 }
